# solis

./: .gitignore  README.md  pyproject.toml
cfg/: deeplabv3_resnet50.yaml  resnet18.yaml  resnet50.yaml
src/solis/: __main__.py  export_onnx.py  export_torch.py
src/solis_lightning/datamodules/: __init__.py
src/solis_lightning/datamodules/sentinel/: classification.py  segmentation.py
src/solis_lightning/modules/: __init__.py  deeplab.py  resnet.py
src/solis_torch/: __init__.py
src/solis_torch/datasets/sentinel/: __init__.py  classification.py  common.py  segmentation.py
src/solis_torch/models/: __init__.py  deeplab.py  resnet.py
src/solis_torch/transforms/: __init__.py  transforms.py
